# xag-monitoring-prototype

./: .gitignore  LICENSE.md  README.md  docker-compose.yaml  monitor.py  pom.xml  pyproject.toml  run.sh  traces_info.sh  traces_search.sh
configs/: grafana-datasources.yaml  prometheus.yaml  tempo.yaml
explainer/: app.py  data  pyproject.toml  uss
explainer/templates/: explain_plan_selection.html  explain_plan_selection_with_report.html  explain_trace.html  scenarios.html  scenarios_with_llm.html
features/: coffee.feature  environment.py  kitchencoffee.feature  officebeliefs.feature
features/steps/: coffee.py
monitoring/: .dockerignore  Dockerfile  behave.ini  behave.ini.docker  behave.ini.sample  call-return-not-caught.json  important.json  monitor-locally.sh  monitor.py  monitor.sh  pyproject.toml  summarize-reports.py  trace-with-error-not-caught.json  trace1.json  verify-trace.py  verify-trace.sh
monitoring/features/: environment.py  getcoffee.feature  kitchencoffee.feature.demo
monitoring/features/steps/: coffee.py
monitoring/tests/: test_behave.py  test_service.py  test_tempo.py
monitoring/tests/features/: getcoffee.feature
monitoring/tests/features/steps/: steps.py
monitoring/tests/resources/: trace-kitchen-and-shop-fail-meta.json  trace-kitchen-and-shop.json  trace-only-kitchen.json  trace.json
monitoring/tests/resources/reports/: trace-kitchen-and-shop-fail-report.json  trace-kitchen-and-shop-ok-report.json
monitoring/uss/: behave.py  service.py  tempo.py
tests/: test_loki.py
tests/resources/: search.json  trace2.json
uss/: loki.py  service.py  tempo.py
(+7 files in other folders)
